// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PostTopDetails Component should match snapshot 1`] = `
Array [
  <div
    className="p_i_img"
  >
    <img
      src="/users/24/avatar.jpg"
    />
  </div>,
  <div
    className="p_i_1"
    style={
      Object {
        "top": "inherit",
      }
    }
  >
    <Link
      title="takkar"
      to="/profile/takkar"
    >
      takkar
    </Link>
    <span
      className="p_i_1_title"
      title="A-301, 90 Feet Road, Dharavi, Mumbai, Maharashtra 400017, India"
    >
      A-301, 90 Feet Road, Dharavi, Mum..
    </span>
  </div>,
]
`;

exports[`PostTopDetails Component should match snapshot and show first & second name of user if no location 1`] = `
Array [
  <div
    className="p_i_img"
  >
    <img
      src="/users/24/avatar.jpg"
    />
  </div>,
  <div
    className="p_i_1"
    style={
      Object {
        "top": "inherit",
      }
    }
  >
    <Link
      title="takkar"
      to="/profile/takkar"
    >
      takkar
    </Link>
    <span
      className="p_i_1_title"
      title={null}
    >
      iam_ takkar
    </span>
  </div>,
]
`;

exports[`PostTopDetails Component should match snapshot and show group name when type == group 1`] = `
Array [
  <div
    className="p_i_img"
  >
    <img
      src="/users/24/avatar.jpg"
    />
  </div>,
  <div
    className="p_i_1"
    style={
      Object {
        "top": -8,
      }
    }
  >
    <Link
      title="takkar"
      to="/profile/takkar"
    >
      takkar
    </Link>
    <div
      className="its_grp_post"
    >
      <span
        className="to_grp_arrow"
      >
        <i
          className="material-icons"
        >
          arrow_drop_up
        </i>
      </span>
      <Link
        className="to_grp_name"
        to="/group/11"
      >
        cool group
      </Link>
    </div>
    <span
      className="p_i_1_title"
      title="A-301, 90 Feet Road, Dharavi, Mumbai, Maharashtra 400017, India"
    >
      A-301, 90 Feet Road, Dharavi, Mum..
    </span>
  </div>,
]
`;
